--- a/index.html
+++ b/index.html
@@ -4,67 +4,88 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>WebStudio</title>
   </head>
 
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li>
-            <a href="#studio"> Studio </a>
+    <header class="header">
+      <nav class="header-nav">
+        <a class="header-logo link" href="./index.html">
+          <span>Web</span>Studio</a
+        >
+        <ul class="header-menu list">
+          <li class="header-menu-item">
+            <a class="header-menu-link link" href="./index.html"> Studio </a>
           </li>
           <li>
-            <a href="#portfolio"> Portfolio </a>
+            <a class="header-menu-link link" href="./portfolio.html">
+              Portfolio
+            </a>
           </li>
           <li>
-            <a href="#contacts"> Contacts </a>
+            <a class="header-menu-link link" href="#contacts"> Contacts </a>
           </li>
         </ul>
       </nav>
 
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="header-address">
+        <ul class="header-address-menu list">
+          <li class="header-address-menu-item">
+            <a
+              class="header-address-menu-link link"
+              href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="header-address-menu-item">
+            <a class="header-address-menu-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
 
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="solutions">
+        <h1 class="solutions-title">Effective Solutions for Your Business</h1>
+        <button class="solutions-btn" type="button">Order Service</button>
       </section>
 
-      <section>
+      <section class="benefits">
         <h2 hidden>Benefits</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+        <ul class="benefits-menu list">
+          <li class="benefits-item">
+            <h3 class="benefits-title">Strategy</h3>
+            <p class="benefits-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
+          <li class="benefits-item">
+            <h3 class="benefits-title">Punctuality</h3>
+            <p class="benefits-text">
+              Bri class="benefits-text"ng the key message to the brand's
+              audience for the best price within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="benefits-item">
+            <h3 class="benefits-title">Diligence</h3>
+            <p class="benefits-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="benefits-item">
+            <h3 class="benefits-title">Technologies</h3>
+            <p class="benefits-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -72,10 +93,10 @@
         </ul>
       </section>
 
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
-          <li>
+      <section class="products">
+        <h2 class="products-title">What are we doing</h2>
+        <ul class="products-menu list">
+          <li class="products-item">
             <img
               src="./images/img1.jpg"
               alt="monitor"
@@ -83,7 +104,7 @@
               height="300"
             />
           </li>
-          <li>
+          <li class="products-item">
             <img
               src="./images/img2.jpg"
               alt="phone-screens"
@@ -91,7 +112,7 @@
               height="300"
             />
           </li>
-          <li>
+          <li class="products-item">
             <img
               src="./images/img3.jpg"
               alt="phone-in-hand"
@@ -102,56 +123,57 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-menu list">
+          <li class="team-item">
             <img
               src="./images/teamcard1.jpg"
               alt="Mark-Guerrero-photo"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-name">Mark Guerrero</h3>
+            <p class="team-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/teamcard2.jpg"
               alt="Tom-Ford-photo"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-name">Tom Ford</h3>
+            <p class="team-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/teamcard3.jpg"
+              class="team-item"
               alt="Camila-Garcia-photo"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-name">Camila Garcia</h3>
+            <p class="team-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/teamcard4.jpg"
               alt="Daniel-Wilson-photo"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-name">Daniel Wilson</h3>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="footer-logo link" href="./index.html"><span>Web</span>Studio</a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
