--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <header class="header">
       <nav class="header-nav">
         <a class="header-logo link" href="./index.html">
-          <span>Web</span>Studio</a
-        >
+          Web<span>Studio</span>
+        </a>
         <ul class="header-menu list">
           <li class="header-menu-item">
             <a class="header-menu-link link" href="./index.html"> Studio </a>
@@ -30,7 +30,7 @@
             </a>
           </li>
           <li>
-            <a class="header-menu-link link" href="#contacts"> Contacts </a>
+            <a class="header-menu-link link" href="./index.html"> Contacts </a>
           </li>
         </ul>
       </nav>
@@ -172,7 +172,7 @@
     </main>
 
     <footer class="footer">
-      <a class="footer-logo link" href="./index.html"><span>Web</span>Studio</a>
+      <a class="footer-logo link" href="./index.html">Web<span>Studio</span></a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
