--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </a>
           </li>
           <li>
-            <a class="header-menu-link link" href="./index.html"> Contacts </a>
+            <a class="header-menu-link link" href=""> Contacts </a>
           </li>
         </ul>
       </nav>
