--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
             </a>
           </li>
           <li>
-            <a class="header-menu-link link" href="./index.html"> Contacts </a>
+            <a class="header-menu-link link" href=""> Contacts </a>
           </li>
         </ul>
       </nav>
