--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
     </main>
 
     <footer class="footer">
-      <a class="footer-logo link" href="./index.html">Web<span>Studio</span></a>
+      <a class="footer-logo link" href="./index.html">
+          Web<span>Studio</span>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
