--- a/portfolio.html
+++ b/portfolio.html
@@ -186,7 +186,8 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo link" href="./index.html">Web<span>Studio</span></a>
+      <a class="footer-logo link" href="./index.html">
+          Web<span>Studio</span>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
