--- a/portfolio.html
+++ b/portfolio.html
@@ -187,7 +187,8 @@
     </main>
     <footer class="footer">
       <a class="footer-logo link" href="./index.html">
-          Web<span>Studio</span>
+        Web<span>Studio</span></a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
