--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
     <footer class="footer">
       <a class="footer-logo link" href="./index.html">
-        Web<span>Studio</span></a
+        Web<span class="footer-logo">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
