--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header">
       <nav class="header-nav">
         <a class="header-logo link" href="./index.html">
-          Web<span>Studio</span>
+          Web<span class="header-logo">Studio</span>
         </a>
         <ul class="header-menu list">
           <li class="header-menu-item">
