--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <header class="header">
       <nav class="header-nav">
         <a class="header-logo link" href="./index.html">
-          Web<span class="header-logo">Studio</span>
+          Web<span class="header-logo-akcent">Studio</span>
         </a>
         <ul class="header-menu list">
           <li class="header-menu-item">
@@ -188,7 +188,7 @@
 
     <footer class="footer">
       <a class="footer-logo link" href="./index.html">
-        Web<span class="footer-logo">Studio</span></a
+        Web<span class="footer-logo-akcent">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
